fix(layout): container is not centered on a bigger screen add: custom favicon

--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -96,6 +96,12 @@
       transform: translateY(calc(-100% - var(--gap)));
     }
   }
+
+  /* === ADD: Container centering === */
+
+  /* --container-padding: 2rem;
+  --breakpoint-2xl: 1400px; */
+  --container-center: true;
 }
 
 :root {
